--- a/src/css/modules/components/masthead.css
+++ b/src/css/modules/components/masthead.css
@@ -4,7 +4,7 @@
     linear-gradient(rgb(82, 0, 255, 0), rgb(82, 0, 255, 0.04));
   background-repeat: repeat-x, no-repeat;
   background-position: left bottom, top left;
-  overflow-x: hidden;
+  overflow: hidden;
   padding-bottom: calc(var(--g-row) * 13);
   position: relative;
 }
